--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Kyle Williams <kyle.anthony.williams2@gmail.com>"]
 python = "^3.8"
 rfeed = "^1.1.1"
 Flask = "^2.0.1"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
